<resources>
    <string name="app_name">Flight Tickets App</string>

    <string name="flight_tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorts_about_towns">Короче</string>
    <string name="subscribes">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="search">поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>